--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
   "dependencies": {
+    "@react-navigation/native": "^6.1.3",
+    "@react-navigation/stack": "^6.3.12",
     "expo": "^47.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-web": "~0.18.7"
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-web": "~0.18.7",
+    "react-native-screens": "~3.18.0",
+    "react-native-safe-area-context": "4.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
     "@types/react": "~18.0.24",
     "@types/react-native": "~0.70.6",
+    "file-loader": "^6.2.0",
     "typescript": "^4.6.3"
   },
   "scripts": {
