--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
     "react-native-gesture-handler": "^2.9.0",
-    "react-native-web": "~0.18.7",
+    "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-safe-area-context": "4.4.1"
+    "react-native-status-bar-height": "^2.6.0",
+    "react-native-web": "~0.18.7"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
