--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@expo-google-fonts/roboto": "^0.2.2",
     "@react-navigation/native": "^6.1.3",
     "@react-navigation/stack": "^6.3.12",
     "expo": "^47.0.0",
+    "expo-font": "~11.0.1",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-native": "0.70.5",
