--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
   "compilerOptions": {},
-  "extends": "expo/tsconfig.base",
-  "assets": ["./assets/fonts/"]
+  "extends": "expo/tsconfig.base"
 }
